# rs-asn1-filenames2serial

./: Cargo.toml  README.md  name2ser.asn  rs-asn1-filenames2serial.wasm  run.sh
src/: lib.rs  main.rs
