[package]
name = "rs-asn1-filenames2serial"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.der]
version = "0.7.10"
default-features = false
features = [
	"derive",
	"std",
]
